# AAI-511

code/mcp-server/: 1  README.md  _Users_gshiva_AA-511_example_mcp-server-example_mcp-server.docx  lstm-cnn-routing.py  main.py  main.py-working  pyproject.toml  routing-lstm-cnn-mcp-server.docx  train_predict.py
code/mcp-server-image-2/: composer_claude_stdio.py  composer_labels.json  composer_labels_2.json  local_composer_pdf_classifier.py-bkup  pyproject.toml  script.sh
code/mcp-server-transfer-learning/: claude_desktop_config.json  pyproject.toml  tl.py  tl.py-claude
code/mcpserver-lstmft/: cnn_model.keras  main.py  midi_classes.npy  pyproject.toml
projectproposal/: AAI-511 Final Team Project Status Update Form.docx
