[project]
name = "midi-composer-transfer"
version = "0.1.0"
description = "MIDI Composer Classifier with LSTM and Hyperparameter Tuning"
dependencies = [
    "tensorflow>=2.11",
    "pretty_midi",
    "numpy",
    "scikit-learn",
    "fastmcp",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

